# roce-sim

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  run.sh
.github/workflows/: ci.yml
example/: test_case_file.yaml
src/: config.py  exch_client.py  exch_server.py  hooks.py  main.rs  roce.py  roce_client.py  roce_enum.py  roce_rq.py  roce_server.py  roce_sq.py  roce_util.py  roce_v2.py  sanity_manager.py  sanity_side.py  sanity_side.rs  sim_client.py  sim_server.py  test_client.py  test_server.py
src/basic_test/: exch_client.py  sim_client.py  sim_server.py  test_client.py  test_server.py
src/case/: README.md  atomic_cas_success.yaml  base.py  read_psn_error_retry.yaml  read_remote_success.py  read_success.py  read_success.yaml  rxe_read_success.yaml  rxe_send_success.yaml  rxe_write_partial_retry.yaml  rxe_write_success.yaml  send_rnr_retry.py  send_rnr_retry.yaml  send_success.yaml  send_sucess.py  sim_read_partial_retry.yaml  sim_read_success.yaml  sim_send_rnr_retry.yaml  sim_write_partial_retry.yaml  sim_write_success.yaml  write_imm_success.yaml  write_success.py  write_success.yaml
src/case/success/: rxe_write_imm_success.yaml  rxe_write_success.yaml  sim_write_imm_success.yaml
src/case/transport_layer_err/others/: rxe_write_partial_retry.yaml  sim_read_partial_retry.yaml  sim_write_partial_retry.yaml
src/case/transport_layer_err/requester_side_err/: rxe_bad_response.yaml  rxe_ghost_ack.yaml  rxe_implied_nak_sequence_error_retry_limit_exceeded.yaml  rxe_implied_nak_sequence_error_retry_limit_not_exceeded.yaml  rxe_local_ack_timeout_retry_limit_exceeded.yaml  rxe_local_ack_timeout_retry_limit_not_exceeded.yaml  rxe_psn_retry_limit_exceeded.yaml  rxe_rkey_violation.yaml  rxe_rnr_nak_retry_limit_exceeded.yaml  (+6 more)
src/proto/: message.proto  mod.rs  side.proto
test/: Dockerfile  case.yaml  run.sh  setup.sh
tests/: local_errors.rs
