[package]
name = "roce-sanity"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = "2.33"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
utilities = { git = "https://github.com/pwang7/utilities", rev = "1503c27" }
