[package]
name = "roce-sanity"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-rdma= {git = "https://github.com/rogercloud/async-rdma", rev = "652d5f33"}
bincode = "1.3"
clap = "2.33"
env_logger = "0.8"
grpcio = "0.9.0"
futures = "0.3.16"
lazy_static = "1.4.0"
log = "0.4"
protobuf = "2.25.0"
rdma-sys = {git = "https://github.com/datenlord/rdma-sys"}
serde = { version = "1.0", features = ["derive"] }
utilities = { git = "https://github.com/pwang7/utilities", rev = "1503c27" }

[[bin]]
name = "sanity_side"
path = "src/sanity_side.rs"
